# ChangeLog for app-editors/xemacs
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/app-editors/xemacs/ChangeLog,v 1.13 2002/07/29 05:20:23 mkennedy Exp $

*xemacs-21.4.8-r3 (28 Jul 2002)

  28 Jul 2002; Matthew Kennedy <mkennedy@gentoo.org>
  xemacs-21.4.8-r3.ebuild :

  Updated EFS, MULE and BASE versions.

*xemacs-21.4.8-r2 (14 Jul 2002)

  14 Jul 2002; Matthew Kennedy <mkennedy@gentoo.org>
  xemacs-21.4.8-r2.ebuild :

  Made SRC_URI static, added KEYWORDS, fixed empty mule flag, updated
  efs, xemacs-base and mule-base subpackage versions.

*xemacs-21.4.8-r1 (26 June 2002)

  26 June 2002; Mark Guertin <gerk@gentoo.org> xemacs-21.4.8-r1.ebuild,
  files/xemacs-21.4.8-ppc.diff

  Added ppc patch to fix configure and configure.in scripts and tested
  ok on x86 + PPC.  No revision bump as it only affects PPC and no need
  for x86 users to rebuild (didn't work on ppc to date).

  Thanks to rac@intrigue.com (Robert Coie) for the patch.

*xemacs-21.4.8-r1 (31 May 2002)

  31 May 2002; Matthew Kennedy <mkennedy@gentoo.org> xemacs-21.4.8-r1.ebuild, 
  files/digest-xemacs-21.4.8-r1, ChangeLog :

  Back to gpm-1.19.6.

*xemacs-21.4.8 (19 May 2002)

  19 May 2002; Matthew Kennedy <mkennedy@gentoo.org> xemacs-21.4.8.ebuild, 
  files/README.Gentoo, files/digest-xemacs-21.4.8, 
  files/emodules.info-21.4.8-gentoo.patch :

  New xemacs-21.4.8 (gamma). Adds missing gpm dependency. General overhaul.

*xemacs-21.4.6-r4 (16 Apr 2002)

  16 Apr 2002: Matthew Kennedy <mkennedy@gentoo.org>
  xemacs-21.4.6-r4.ebuild, files/digest-xemacs-21.4.6-r4, ChanegLog :

  Includes SANDBOX_DISABLED="1" (quick and dirty fix) to prevent
  xemacs segfaults.

*xemacs-21.4.6-r3 (15 Apr 2002)

  15 Apr 2002: Matthew Kennedy <mkennedy@gentoo.org>
  xemacs-21.4.6-r3.ebuild, ChangeLog files/digest-xemacs-21.4.6-r3,
  files/emodules.info-gentoo.patch :

  Fixes annoying emodules.info not having a place in the info dir
  (resolves bug #1792).
