@@ -1,8 +1,12 @@
 # ChangeLog for app-editors/xemacs
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-editors/xemacs/ChangeLog,v 1.13 2002/07/29 05:20:23 mkennedy Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/xemacs/ChangeLog,v 1.14 2002/08/04 17:29:55 azarah Exp $
 
 *xemacs-21.4.8-r3 (28 Jul 2002)
+
+  04 Aug 2002; Martin Schlemmer <azarah@gentoo.org> xemacs-21.4.8-r3.ebuild :
+
+  Disable emake, as it cause it to fail everytime this side.  
 
   28 Jul 2002; Matthew Kennedy <mkennedy@gentoo.org>
   xemacs-21.4.8-r3.ebuild :
